--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,65 @@
+body {
+    background-color: #ecf0f1;
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+}
+
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #7b95ae;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.cities {
+    background-color: #ffffff;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.date {
+    font-size: 14px;
+    color: #7f8c8d;
+}
+
+.time {
+    font-size: 24px;
+    font-weight: bold;
+    color: #2c3e50;
+}
+select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #bdc3c7;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
 h1 {
     color: #2c3e50;
-    font-family: Arial, sans-serif;
+    text-align: center;
+    font-size: 36px;
+    margin-top: 50px;
+}
+
+h2 {
+    color: #34495e;
+    font-size: 24px;
+    margin: 0;
+}
+footer {
     text-align: center;
     margin-top: 50px;
+    font-size: 14px;
+    color: #7f8c8d;
 }
