--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
     padding: 20px;
     background-color: #7b95ae;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
 }
 
 .city {
@@ -51,7 +51,7 @@ h1 {
     color: #2c3e50;
     text-align: center;
     font-size: 36px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 h2 {
